# uynab

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: format_check.yml  release.yml  tests.yml  type_check.yml
contribution/: index.html
docs/: contribution.md  environment.md  getting-started.md  model.md  service.md  uynab.md
documentation/: index.html
environment/: index.html
getting-started/: index.html
how-to-guides/: index.html
license/: index.html
reference/: index.html
src/uynab/: __main__.py  client.py  error.py
src/uynab/abstract/: client.py
src/uynab/model/: account.py  budget.py  category.py  payee.py  transaction.py  utils.py
src/uynab/service/: __init__.py  account.py  budget.py  category.py  payee.py  service.py  transaction.py
tests/: conftest.py  test_client.py  test_model_budget.py  test_service.py  test_service_budget.py  test_service_category.py  test_service_payee.py  test_service_transaction.py
use-make/: index.html
