[project]
name = "uynab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adam Walkiewicz", email = "aj.walkiewicz@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]
